--- a/Article/Article.less
+++ b/Article/Article.less
@@ -33,16 +33,17 @@
     position: absolute;
     bottom: 0;
     left: 50%;
-    font-size: 12px;
+    // font-size: 1.2rem;
+    // font-weight: bold;
     color: grey;
     cursor: pointer;
     transform: translate(-50%);
-    background-color: white;
+    // background-color: powderblue;
   }
 }
 
 .article-open {
-  height: 400px;
+  height: auto;
 }
 
 
